# pdpp

./: .black.toml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE.txt  README.md  README.rst  env.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/A/: dodo.py
examples/A/task_2/: .pdpp_task.yaml
examples/A/task_3/: .pdpp_task.yaml
examples/example_1/: .gitignore  dodo.py
examples/example_1/task_1/: .pdpp_task.yaml
examples/example_1/task_1/src/: task_1.py
examples/example_1/task_2/: .pdpp_task.yaml
examples/example_1/task_2/src/: task_2.py
examples/example_1/task_3/: .pdpp_task.yaml
examples/example_1/task_3/src/: task_3.py
pdpp/: __init__.py  base_task.py  graph_dependencies.py  main.py  new_task.py  pdpp.py  pdpp_class.py  pdpp_class_base.py  rig.py  task_creator.py  task_enabler.py
pdpp/GARBAGE/: import_export.py  import_step_class.py  new_task.py
pdpp/automation/: doit_run.py  link_task.py  mylinker.py  output_tracking.py  task_creator.py  task_enabler.py
pdpp/docs/: conf.py  index.rst
pdpp/doit_constructors/: doit_run.py  link_task.py
pdpp/languages/: extension_parser.py  language_enum.py  language_parser.py  runners.py
pdpp/questions/: __init__.py  question_0.py  question_1.py  question_2.py  question_3.py  question_4.py  question_extant.py
pdpp/src/: create_new_task.py  graph_dependencies.py  rig.py  task_creator.py  task_enabler.py
pdpp/src/doit_constructors/: doit_run.py  link_task.py  mylinker.py
pdpp/src/languages/: python_runner.py  r_runner.py
pdpp/src/questions/: question_0.py  question_1.py  question_2.py  question_2_A.py  question_3.py  question_4.py  question_5.py  question_6.py
pdpp/src/utils/: ExistingStepFolder.py  immediate_link.py  proj_folder_test.py  rem_slash.py
pdpp/src/yaml_handlers/: import_yaml.py
pdpp/styles/: graph_style.py  prompt_style.py
pdpp/task_types/: __init__.py  custom_task.py  export_task.py  import_task.py  step_task.py  sub_task.py
pdpp/tasks/: base_task.py  custom_task.py  export_task.py  import_task.py  standard_task.py  step_task.py  sub_task.py
pdpp/templates/: create_gitignore.py  create_in_out_src.py  dep_dataclass.py  dodo_template.py  populate_new_project.py  project_structure.py
pdpp/utils/: directory_test.py  execute_at_target.py  graph_dependencies.py  ignorelist.py  immediate_link.py  import_export.py  import_step_class.py  materialize.py  project_config.py  prompt_helpers.py  rem_slash.py  step_directory_test.py  step_folder.py  step_folder_test.py  task_directory_test.py  yaml_dump_self.py  yaml_task.py
test/task_1/: .pdpp_task.yaml
test/task_3/src/: task_3.py
tests/: conftest.py  test_cli.py  test_immediate_link.py  test_materialize.py  test_migrate.py  test_pipeline_e2e.py  test_prompt_helpers.py  test_yaml_task.py
