[tool.poetry]
name = "pdpp"
version = "0.5.0"
description = "Command line tool for automation, transparency, and reproducibility in data processing projects"
authors = ["Pierson Browne <pbrowne88@gmail.com>", "John McLevey <john.mclevey@uwaterloo.ca>", "Rachel Wood", "Tyler Crick"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UWNETLAB/pdpp"

[tool.poetry.dependencies]
python = "^3.8"
Click = "^7.0"
doit = "^0.31.1"
networkx = "^2.2"
graphviz = "^0.10.1"
pydot = "^2.0.0"
questionary = "^1.0.2"
pyyaml = ">=5.3,<5.5"

[tool.poetry.scripts]
pdpp = "pdpp.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
