[tool.poetry]
name = "pdpp"
version = "0.5.0"
description = "Command line tool for automation, transparency, and reproducibility in data processing projects"
authors = ["Pierson Browne <pbrowne88@gmail.com>", "John McLevey <john.mclevey@uwaterloo.ca>", "Tyler Crick", "Rachel Wood"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UWNETLAB/pdpp"

[tool.poetry.dependencies]
python = "^3.11"
Click = "^8.1.7"
doit = "^0.36.0"
networkx = "^3.3"
graphviz = "^0.20.3"
pydot = "^2.0.0"
questionary = "^2.0.1"
pyyaml = "^6.0.1"
toml = "^0.10.2"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
sphinx = "^7.3.7"

[tool.poetry.scripts]
pdpp = "pdpp.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
