[tool.poetry]
name = "pdpp"
version = "0.6.0"
description = "Command line tool for automation, transparency, and reproducibility in data processing projects"
authors = ["Pierson Browne <pbrowne88@gmail.com>", "John McLevey <john.mclevey@uwaterloo.ca>", "Tyler Crick", "Rachel Wood"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UWNETLAB/pdpp"
include = [{ path = "pdpp/py.typed" }]

[tool.poetry.dependencies]
python = "^3.11"
Click = "^8.1.7"
doit = "^0.36.0"
networkx = "^3.3"
pydot = "^2.0.0"
questionary = "^2.0.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.6.0"

[tool.poetry.scripts]
pdpp = "pdpp.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint.per-file-ignores]
# doit discovers `task_all` / `gen_many_tasks` via globals(); these imports are
# intentional re-exports even though they look unused to a static linter.
"pdpp/automation/doit_run.py" = ["F401"]
# The questions package re-exports q1..q4 for convenient import.
"pdpp/questions/__init__.py" = ["F401"]
